--- a/jc-club-subject/jc-club-common/pom.xml
+++ b/jc-club-subject/jc-club-common/pom.xml
@@ -48,6 +48,12 @@
             <version>19.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.11</version>
+        </dependency>
+
 
     </dependencies>
 
